<!--This file is part of CHIMERA: Companion for Humans Intending to
    Master Extreme Role Adventures ("CHIMERA").

    CHIMERA is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    CHIMERA is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with CHIMERA.  If not, see <https://www.gnu.org/licenses/>.
-->

<resources>
    <!--Image descriptions-->
    <string name="character_image" translatable="false">Character image</string>
    <string name="combat_image" translatable="false">Combat Image</string>
    <string name="settings_icon" translatable="false">Settings icon</string>
    <string name="description">Description</string>

    <!--App text-->
    <string name="app_name">CHIMERA</string>
    <string name="campaigns">Campaigns</string>
    <string name="characters">Characters</string>
    <string name="combats">Combats</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="select_characters">Select characters</string>
    <string name="edit_character">Edit character</string>
    <string name="tab_details">Details</string>
    <string name="tab_consumables">Consumables</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="select_consumables">Select consumables</string>
    <string name="edit_consumable">Edit consumable</string>
    <string name="select_combats">Select Combats</string>
    <string name="edit_combat">Edit combat</string>
    <string name="empty_defenders_message">Swipe characters to select defenders</string>
    <string name="attack">Attack</string>
    <string name="initiative">Initiative</string>
    <string name="defense">Defense</string>
    <string name="save">Save</string>
    <string name="combat">Combat</string>
    <string name="life">Life</string>
    <string name="damage">Damage:</string>
    <string name="empty_attacker_message">Tap a character to select attacker</string>
    <string name="roll">Roll</string>
    <string name="edit_campaign">Edit campaign</string>
    <string name="select_campaigns">Select campaigns</string>
    <string name="master_zone">Master</string>
    <string name="player_zone">Player</string>
    <string name="event_map">Event Map</string>
    <string name="edit_event">Edit event</string>
    <string name="change_map">Change map</string>
    <string name="new_campaign">New campaign</string>
    <string name="delete">Delete</string>
    <string name="unlink">Unlink</string>
    <string name="open_event_map">Open event map</string>
    <string name="new_character">New character</string>
    <string name="new_combat">New combat</string>
    <string name="link_combats">Link combats</string>
    <string name="link_characters">Link characters</string>
    <string name="value">Value:</string>
    <string name="modifier">Modifier:</string>
    <string name="copyright_note" translatable="false">Copyright © 2019 Javier Pastor Pérez \n under GNU GPL v3 license.</string>
    <string name="create_character">Create character</string>
    <string name="create_campaign">Create campaign</string>
    <string name="create_combat">Create combat</string>
    <string name="create_consumable">Create consumable</string>
    <string name="duplicate_character">Duplicate character</string>
    <string name="delete_character">Delete character</string>
    <string name="delete_characters">Delete characters</string>
    <string name="delete_combat">Delete combat</string>
    <string name="delete_combats">Delete combats</string>
    <string name="delete_campaign">Delete campaign</string>
    <string name="delete_campaigns">Delete campaigns</string>
    <string name="delete_consumable">Delete consumable</string>
    <string name="delete_consumables">Delete consumables</string>
    <string name="delete_event">Delete event</string>
    <string name="unlink_character">Unlink character</string>
    <string name="delete_campaign_confirmation">Are you sure you want to delete permanently this campaign?</string>
    <string name="delete_campaigns_confirmation">Are you sure you want to delete permanently these campaigns?</string>
    <string name="delete_character_confirmation">Are you sure you want to delete permanently this character?</string>
    <string name="delete_characters_confirmation">Are you sure you want to delete permanently these characters?</string>
    <string name="delete_combat_confirmation">Are you sure you want to delete permanently this combat?</string>
    <string name="delete_combats_confirmation">Are you sure you want to delete permanently these combats?</string>
    <string name="delete_event_confirmation">Are you sure you want to delete permanently this event?</string>
    <string name="delete_consumable_confirmation">Are you sure you want to delete permanently this consumable?</string>
    <string name="delete_consumables_confirmation">Are you sure you want to delete permanently these consumables?</string>
</resources>
