<?xml version="1.0" encoding="utf-8"?>

<!--This file is part of CHIMERA: Companion for Humans Intending to
    Master Extreme Role Adventures ("CHIMERA").

    CHIMERA is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    CHIMERA is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with CHIMERA.  If not, see <https://www.gnu.org/licenses/>.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_campaign"
        android:title="@string/edit_campaign"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_map"
        android:title="@string/open_event_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_campaign"
        android:title="@string/delete_campaign"
        app:showAsAction="never" />
</menu>