<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_character" />

            <EditText
                android:id="@+id/character_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/name"
                android:inputType="text"
                android:maxWidth="50dp"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/lightTextColor" />

            <EditText
                android:id="@+id/character_edit_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColor="@color/primaryTextColor"
                android:textColorHint="@color/lightTextColor" />
        </LinearLayout>
    </ScrollView>

        <Button
            android:id="@+id/accept_character_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/contrastColor"
            android:onClick="saveCharacter"
            android:text="@string/accept"
            android:textColor="@color/backgroundColor"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/cancel_character_creation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#00000000"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@color/contrastColor"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/accept_character_creation_button"/>
</RelativeLayout>